--- a/admin.html
+++ b/admin.html
@@ -1,22 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 
 <body>
-    <button>
-        <a href="addteacher.html">Add Teacher</a>
-    </button>
-    <button>
-        <a href="viewstudent.html">Add Teacher</a>
-    </button>
+    <div class="bg-image"></div>
+    <div class="content">
+        <div class="card one">
+            <div class="top">
+                <div class="title">Admission Detail</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1> 2023 Batch MCA Admission</h1><br>
+            </div>
+            <div class="details">
 
-
+                <button> <a href="viewstudent.html">Approve Student</a></button>
+            </div>
+        </div>
+        <div class="card two">
+            <div class="top">
+                <div class="title">Add Teacher</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1> Teacher Information </h1><br>
+            </div>
+            <div class="details">
+                <button><a href="addteacher2.html">Approve Teacher</a></button>
+            </div>
+        </div>
+        <div class="card three">
+            <div class="top">
+                <div class="title">Future use</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1>Add Other Details</h1><br>
+            </div>
+            <div class="details">
+                <button>add details</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
