--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 </head>
 
 <body>
+
   <div class="heading">
     <div class="container">
       <img src="klogo.jpg" alt="Avatar" class="image">
@@ -56,8 +57,8 @@
     <a href="about.html" class="active">Home</a>
     <a href="#about_us">About</a>
     <a href="#history">history</a>
-    <a href="login.html">Login</a>
-    <a href="register.html">Admission</a>
+    <a href="login1.html">Login</a>
+    <a href="Admission.html">Admission</a>
 
   </div>
 
@@ -87,7 +88,7 @@
       </div>
     </div>
     <section>
-      <div id="history" style="font-size:large">
+      <div id="history" class="his" style="font-size:large">
         <img src="d.png" class="d">
         <h1 class="heading"><b>The Founder: Arutchelvar Dr. N. Mahalingam</b></h1>
         <p class="para">Arutchelvar Dr. N Mahalingam was the Founder Chairman of Sakthi Group,
