update final code

--- a/admin.html
+++ b/admin.html
@@ -32,7 +32,7 @@
         </div>
         <div class="card two">
             <div class="top">
-                <div class="title">Add Teacher</div>
+                <div class="title">Teacher Detail</div>
                 <div class="price-sec">
                     <span class="dollar"></span>
                     <span class="price"></span>
@@ -40,15 +40,15 @@
                 </div>
             </div>
             <div class="info">
-                <h1> Teacher Information </h1><br>
+                <h1> Adding Teacher Details </h1><br>
             </div>
             <div class="details">
-                <button><a href="addteacher2.html">Approve Teacher</a></button>
+                <button><a href="TeacherAdd.html">Approve Teacher</a></button>
             </div>
         </div>
         <div class="card three">
             <div class="top">
-                <div class="title">Future use</div>
+                <div class="title">Subject Detail</div>
                 <div class="price-sec">
                     <span class="dollar"></span>
                     <span class="price"></span>
@@ -56,10 +56,10 @@
                 </div>
             </div>
             <div class="info">
-                <h1>Add Other Details</h1><br>
+                <h1>Add or Delte Subject</h1><br>
             </div>
             <div class="details">
-                <button>add details</button>
+                <button><a href="AddCourse.html">Subject Details</a></button>
             </div>
         </div>
     </div>
