--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <a href="#history">history</a>
     <a href="login1.html">Login</a>
     <a href="Admission.html">Admission</a>
+    <a href="merit.html">Merit Result</a>
 
   </div>
 
