--- a/student.html
+++ b/student.html
@@ -1,1 +1,53 @@
-<h1>Student logged in successfully</h1>
+<!DOCTYPE html>
+
+<html lang="en" dir="ltr">
+
+<head>
+    <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <div class="bg-image"></div>
+    <div class="content">
+        <div class="card one">
+            <div class="top">
+                <div class="title">View Marks</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1> Student Can View Unit Test , Assignment Semester Mark </h1><br>
+            </div>
+            <div class="details">
+
+                <button> <a href="viewMark.html">View Mark</a></button>
+            </div>
+        </div>
+        <div class="card two">
+            <div class="top">
+                <div class="title">View Attendance</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1> Student Can View attendance for all Subject </h1><br>
+            </div>
+            <div class="details">
+                <button><a href="viewAttedance.html">View Attendance</a></button>
+            </div>
+        </div>
+
+    </div>
+</body>
+
+</html>
