--- a/teacher.html
+++ b/teacher.html
@@ -1,1 +1,84 @@
-<h1>Teacher logged in successfully</h1>
+<!DOCTYPE html>
+
+<html lang="en" dir="ltr">
+
+<head>
+    <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="admin.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+    <div class="bg-image"></div>
+    <div class="content">
+        <div class="card one">
+            <div class="top">
+                <div class="title">Unit Test Mark</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1> Mark all three unit test mark</h1><br>
+            </div>
+            <div class="details">
+
+                <button> <a href="UnitTest.html">Unit Test</a></button>
+            </div>
+        </div>
+        <div class="card two">
+            <div class="top">
+                <div class="title">Assignment Mark</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1> Assignment Mark </h1><br>
+            </div>
+            <div class="details">
+                <button><a href="AssignmentMark.html">Assignment Mark</a></button>
+            </div>
+        </div>
+        <div class="card three">
+            <div class="top">
+                <div class="title">Semester Mark</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1>Release Semester Result</h1><br>
+            </div>
+            <div class="details">
+                <button><a href="SemesterMark.html">Semester Mark</a></button>
+            </div>
+        </div>
+        <div class="card four">
+            <div class="top">
+                <div class="title">Attendance for Student</div>
+                <div class="price-sec">
+                    <span class="dollar"></span>
+                    <span class="price"></span>
+                    <span class="decimal"></span>
+                </div>
+            </div>
+            <div class="info">
+                <h1>Mark daily Attendance</h1><br>
+            </div>
+            <div class="details">
+                <button><a href="attedence.html">Attendance</a></button>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
