--- a/login1.html
+++ b/login1.html
@@ -27,9 +27,9 @@
                     <label>Password</label>
                     <input type="password" id="psw" required>
                 </div>
-                <div class="forgot-pass">
+               <!-- <div class="forgot-pass">
                     <a href="#">Forgot Password?</a>
-                </div>
+             </div> !-->
                 <div class="btn">
                     <div class="inner"></div>
                     <button type="submit" onclick="login()">login</button>
